Fixed the bug that made the screenshot look very ugly on mobile devices.

--- a/css/main.scss
+++ b/css/main.scss
@@ -379,6 +379,11 @@ nav.topmenu a:hover {
 }
 
 // Custom styles
+img.screenshot {
+  max-width: 100%;
+  height: auto;
+}
+
 .github-activity {
   list-style-type: none;
 }
